--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-batch")
     compile group: 'log4j', name: 'log4j', version: '1.2.17'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    testCompile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+    testCompile("org.springframework.boot:spring-boot-starter-test")
+    testCompile("org.springframework.batch:spring-batch-test:3.0.5.RELEASE")
 }
