Finish csv converter

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -4,5 +4,8 @@ input.filename=src/test/resources/input.test.txt
 #path to output file
 output.filename=build/resources/test/output.test.csv
 
+#path to reference file
+output.reference.filename=build/resources/test/small.csv
+
 #output type (XML, CSV)
 output.type=CSV
