First alpha version

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,11 +1,17 @@
 #path to input file
 input.filename=src/test/resources/input.test.txt
 
-#path to output file
-output.filename=build/resources/test/output.test.csv
+#path to csv output file
+output.csv.filename=build/resources/test/output.test.csv
 
-#path to reference file
-output.reference.filename=build/resources/test/small.csv
+#path to csv reference file
+output.csv.reference.filename=build/resources/test/small.csv
+
+#path to xml output file
+output.xml.filename=build/resources/test/output.test.xml
+
+#path to xml reference file
+output.xml.reference.filename=build/resources/test/small.xml
 
 #output type (XML, CSV)
 output.type=CSV
