--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 #path to input file
 input.filename=input.txt
 
-#path to output file
-output.filename=output.csv
+#path to csv output file
+output.csv.filename=output.csv
+
+#path to xml output file
+output.xml.filename=output.xml
 
 #output type (XML, CSV)
 output.type=CSV
